force-app/force-app/force-app/main/default/objects/Account/fields/Shipping_GST_No__c.field-meta.xml
<CustomField>
    <fullName>Shipping_GST_No__c</fullName>
    <label>Shipping GST No</label>
    <length>15</length>
    <type>Text</type>
</CustomField>