force-app/force-app/force-app/main/default/objects/Account/fields/Shipping_PAN_No__c.field-meta.xml
<CustomField>
    <fullName>Shipping_PAN_No__c</fullName>
    <label>PAN No</label>
    <length>10</length>
    <type>Text</type>
</CustomField>