force-app/force-app/force-app/main/default/objects/Account/fields/Sub_Category__c.field-meta.xml
<CustomField>
    <fullName>Sub_Category__c</fullName>
    <label>Sub Category</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Category__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>OEM-Forklift</fullName>
            </value>
            <value>
                <fullName>OEM-Skidsteer</fullName>
            </value>
            <value>
                <fullName>OEM-GSE</fullName>
            </value>
            <value>
                <fullName>OEM-Port</fullName>
            </value>
            <value>
                <fullName>OEM-WH Equipment</fullName>
            </value>
            <value>
                <fullName>OEM-Agri Implement</fullName>
            </value>
            <value>
                <fullName>OEM-Back hoe-Telehandler</fullName>
            </value>
            <value>
                <fullName>REPL-Corporate-Dom</fullName>
            </value>
            <value>
                <fullName>REPL-Corporate - MNC</fullName>
            </value>
            <value>
                <fullName>REPL -GEM</fullName>
            </value>
            <value>
                <fullName>REPL-Forklift Hirer</fullName>
            </value>
            <value>
                <fullName>REPL-Forklift Spare parts Dealer</fullName>
            </value>
            <value>
                <fullName>REPL-Forklift Service &amp; Maint</fullName>
            </value>
            <value>
                <fullName>REPL- Forklift Tyre Dealer</fullName>
            </value>
            <value>
                <fullName>REPL- Tyre Dealer</fullName>
            </value>
            <value>
                <fullName>REPL-Agri Implement</fullName>
            </value>
            <value>
                <fullName>REPL-Skidsteer</fullName>
            </value>
            <value>
                <fullName>REPL-Back hoe-Telehandler</fullName>
            </value>
            <value>
                <fullName>CP-EEFF</fullName>
            </value>
            <value>
                <fullName>CP-Emerald Direct</fullName>
            </value>
            <value>
                <fullName>CP-BA</fullName>
            </value>
            <value>
                <fullName>CP-BR</fullName>
            </value>
            <value>
                <fullName>CP-BM</fullName>
            </value>
            <value>
                <fullName>BWH</fullName>
            </value>
            <value>
                <fullName>DWH</fullName>
            </value>
            <value>
                <fullName>SAR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>