force-app/force-app/force-app/main/default/objects/Account/fields/Tax_Exempted__c.field-meta.xml
<CustomField>
    <fullName>Tax_Exempted__c</fullName>
    <label>Tax Exempted?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>YES</fullName>
            </value>
            <value>
                <fullName>NO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>