force-app/force-app/force-app/main/default/objects/Account/fields/Tax_Exempted_Reason__c.field-meta.xml
<CustomField>
    <fullName>Tax_Exempted_Reason__c</fullName>
    <label>Tax Exempted Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SEZ</fullName>
            </value>
            <value>
                <fullName>Overseas</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>