force-app/force-app/force-app/main/default/objects/Account/fields/Tax_Exemption_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Tax_Exemption_Remarks__c</fullName>
    <label>Tax Exemption Remarks</label>
    <length>100</length>
    <type>Text</type>
</CustomField>