force-app/force-app/force-app/main/default/objects/Account/fields/Test011__c.field-meta.xml
<CustomField>
    <fullName>Test011__c</fullName>
    <label>Test011</label>
    <type>TextArea</type>
</CustomField>