force-app/force-app/force-app/main/default/objects/Account/fields/Test01__c.field-meta.xml
<CustomField>
    <fullName>Test01__c</fullName>
    <label>Test01</label>
    <type>TextArea</type>
</CustomField>