force-app/force-app/force-app/main/default/objects/Account/fields/Test02__c.field-meta.xml
<CustomField>
    <fullName>Test02__c</fullName>
    <label>Test003</label>
    <length>200</length>
    <type>Text</type>
</CustomField>