force-app/force-app/force-app/main/default/objects/Account/fields/Test_20__c.field-meta.xml
<CustomField>
    <fullName>Test_20__c</fullName>
    <label>Test 20</label>
    <length>20</length>
    <type>Text</type>
</CustomField>