force-app/force-app/force-app/main/default/objects/Account/fields/Test_Date__c.field-meta.xml
<CustomField>
    <fullName>Test_Date__c</fullName>
    <label>Test Date</label>
    <type>DateTime</type>
</CustomField>