force-app/force-app/force-app/main/default/objects/Account/fields/Transit_Time__c.field-meta.xml
<CustomField>
    <fullName>Transit_Time__c</fullName>
    <label>Transit Time (Days)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>