force-app/force-app/force-app/main/default/objects/Account/fields/Transport_Arrangement__c.field-meta.xml
<CustomField>
    <fullName>Transport_Arrangement__c</fullName>
    <label>Transport Arrangement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Emerald</fullName>
            </value>
            <value>
                <fullName>Customer Pickup</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>