force-app/force-app/force-app/main/default/objects/Account/fields/Transport_Preference__c.field-meta.xml
<CustomField>
    <fullName>Transport_Preference__c</fullName>
    <label>Transport Preference</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Market__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>VRL Logistics</fullName>
            </value>
            <value>
                <fullName>TCI Freight</fullName>
            </value>
            <value>
                <fullName>Jaipur Golden</fullName>
            </value>
            <value>
                <fullName>PAN India</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>Liner Names</fullName>
            </value>
            <value>
                <fullName>None</fullName>
                <isActive>false</isActive>
                <label>None</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>