force-app/force-app/force-app/main/default/objects/Account/fields/Transport_Preference_Others__c.field-meta.xml
<CustomField>
    <fullName>Transport_Preference_Others__c</fullName>
    <label>Transport Preference - Others</label>
    <length>100</length>
    <type>Text</type>
</CustomField>