force-app/force-app/force-app/main/default/objects/Account/fields/Vantage_Point__c.field-meta.xml
<CustomField>
    <fullName>Vantage_Point__c</fullName>
    <label>Vantage Point</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ahmedabad</fullName>
            </value>
            <value>
                <fullName>Akola</fullName>
            </value>
            <value>
                <fullName>Allahabad</fullName>
            </value>
            <value>
                <fullName>Ankleshwar</fullName>
            </value>
            <value>
                <fullName>Aurangabad</fullName>
            </value>
            <value>
                <fullName>Bangalore</fullName>
            </value>
            <value>
                <fullName>Bhiwadi</fullName>
            </value>
            <value>
                <fullName>Bhopal</fullName>
            </value>
            <value>
                <fullName>Bhubaneshwar</fullName>
            </value>
            <value>
                <fullName>Bilaspur</fullName>
            </value>
            <value>
                <fullName>Chandigarh</fullName>
            </value>
            <value>
                <fullName>Chandrapur</fullName>
            </value>
            <value>
                <fullName>Chennai</fullName>
            </value>
            <value>
                <fullName>Cochin</fullName>
            </value>
            <value>
                <fullName>Coimbatore</fullName>
            </value>
            <value>
                <fullName>Delhi</fullName>
            </value>
            <value>
                <fullName>Dhanbad</fullName>
            </value>
            <value>
                <fullName>Durgapur</fullName>
            </value>
            <value>
                <fullName>Faridabad</fullName>
            </value>
            <value>
                <fullName>Gandhidham</fullName>
            </value>
            <value>
                <fullName>Goa</fullName>
            </value>
            <value>
                <fullName>Gorakhpur</fullName>
            </value>
            <value>
                <fullName>Gurgaon</fullName>
            </value>
            <value>
                <fullName>Haldia</fullName>
            </value>
            <value>
                <fullName>Haridwar</fullName>
            </value>
            <value>
                <fullName>Hosur</fullName>
            </value>
            <value>
                <fullName>Hubli</fullName>
            </value>
            <value>
                <fullName>Hyderabad</fullName>
            </value>
            <value>
                <fullName>Indore</fullName>
            </value>
            <value>
                <fullName>Jabalpur</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>