force-app/force-app/force-app/main/default/objects/Account/fields/Zone_No__c.field-meta.xml
<CustomField>
    <fullName>Zone_No__c</fullName>
    <label>Zone No</label>
    <length>50</length>
    <type>Text</type>
</CustomField>