force-app/force-app/force-app/main/default/objects/Account/fields/Zone_Number__c.field-meta.xml
<CustomField>
    <fullName>Zone_Number__c</fullName>
    <label>Zone Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>