force-app/force-app/force-app/main/default/objects/Account/listViews/AllAccounts.listView-meta.xml
<ListView>
    <fullName>AllAccounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>Market__c</columns>
    <columns>BankAccount__c</columns>
    <columns>Billing_District__c</columns>
    <columns>Billing_Country__c</columns>
    <columns>Org_Ref_No__c</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>All Customers</label>
</ListView>